--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -162,6 +162,11 @@
 	<string name="send_link_instructions">Send this link to your contact:</string>
 	<string name="link_clip_label">Briar link</string>
 	<string name="link_copied_toast">Link copied</string>
+	<string name="pending_contact_requests_snackbar">"There are pending contact requests"</string>
+	<string name="pending_contact_requests">Pending contact requests</string>
+	<string name="add_contact_link_question">Did you send your link already?</string>
+	<string name="yes">Yes</string>
+	<string name="no">No</string>
 
 	<!-- Introductions -->
 	<string name="introduction_onboarding_title">Introduce your contacts</string>
